--- a/index.html
+++ b/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Panda Bootstrap</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Panda Bootstrap</title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <header class="container">
+      <nav class="row">
+        <img src="img/panda.png" alt="" class="logo">
+        <h1 class="title">Pandas</h1>
+        <a href="">Inicio</a>
+        <a href="">Pandas</a>
+        <a href="">Historia</a>
+        <a href="">Extinción</a>
+      </nav>
+  </header>
 
-  </body>
+
+  <section class="container">
+    <div class="xImagen">
+      <span class=cerrar>x</span>
+      <img src="img/panda1.jpg" alt="" class="imagenes">
+    </div>
+
+    <div class="xImagen">
+      <span class=cerrar>x</span>
+      <img src="img/panda2.jpg" alt="" class="imagenes">
+    </div>
+
+    <div class="xImagen" >
+      <span class=cerrar>x</span>
+      <img src="img/panda3.jpg" alt="" class="imagenes">
+    </div>
+
+    <div class="xImagen">
+      <span class=cerrar>x</span>
+      <img src="img/panda4.jpg" alt="" class="imagenes">
+    </div>
+  </section>
+
+  <section id="almacenBotones">
+    <button class="botoncitos origen" id="elOrigen">Origen</button>
+    <button class="botoncitos extincion" id="extinguiedo">Extinción</button>
+    <button class="botoncitos restaurar" id="restaurando">Restaurar Fotos</button>
+  </section>
+  <section class="container">
+    <p class="texto" id="texto1">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+      et dolore magna aliqua.
+
+
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor
+
+      in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in
+      culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+
+    <p class="texto" id="texto2">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+      et dolore magna aliqua.
+
+
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor
+
+      in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in
+      culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </section>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"> </script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script src="js/main.js" ></script>
+</body>
+<footer class="container">
+  <img src="img/chicasDelCoro.png" alt="" class="image-footer">
+  <p> © Copyright </p>
+</footer>
 </html>
